fix(web-components): fix gap appearing under slotted nav items
Fix gap appearing under nav items with slotted <a>s (e.g. in React router story) - caused by changes
made during horizontal scroll work.

--- a/packages/web-components/src/components/ic-navigation-item/ic-navigation-item.css
+++ b/packages/web-components/src/components/ic-navigation-item/ic-navigation-item.css
@@ -39,6 +39,7 @@ ic-typography {
 }
 
 :host(.navigation-item) ::slotted(a) {
+  height: 100%;
   font: var(--ic-font-label) !important;
   letter-spacing: var(--ic-font-letter-spacing-0pt025) !important;
   padding: 0 var(--ic-space-md) !important;
